--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "scripts": {
     "build": "gridsome build",
     "develop": "gridsome develop",
-    "explore": "gridsome explore"
+    "explore": "gridsome explore",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
+    "gh-pages": "^3.1.0",
     "gridsome": "^0.7.0",
     "gridsome-plugin-flexsearch": "^1.0.2",
     "vue": "^2.6.11"
